# rules_cdk

./: .envrc  .mergify.yml  .prettierignore  .renovaterc.json  CONTRIBUTING.md  README.md  WORKSPACE  devbox.json  internal_deps.bzl
.github/workflows/: ci.yaml  release.yml  workspace_snippet.sh
cdk/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  toolchain.bzl
cdk/private/: BUILD.bazel  assembly.bzl  bootstrap.bzl  deploy.bzl  destroy.bzl  diff.bzl  exec.bzl  toolchains_repo.bzl  versions.bzl
cdk/private/latest/: package.json  pnpm-lock.yaml
cdk/private/v2.56.1/: package.json  pnpm-lock.yaml
cdk/private/v2.57.0/: package.json  pnpm-lock.yaml
cdk/tests/: versions_test.bzl
docs/: BUILD.bazel  rules.md
e2e/workspace/: BUILD  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  package.json  pnpm-lock.yaml
e2e/workspace/examples/golang/: BUILD.bazel  main.go
e2e/workspace/examples/javascript/: BUILD.bazel  app.js
e2e/workspace/examples/static/: BUILD.bazel  app.js
