load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//cdk:__subpackages__"],
)

bzl_library(
    name = "cdk_assembly",
    srcs = ["assembly.bzl"],
    visibility = ["//cdk:__subpackages__"],
)

bzl_library(
    name = "cdk_bootstrap",
    srcs = ["bootstrap.bzl"],
    visibility = ["//cdk:__subpackages__"],
)

bzl_library(
    name = "cdk_deploy",
    srcs = ["deploy.bzl"],
    visibility = ["//cdk:__subpackages__"],
    deps = [
        "@aspect_rules_js//js:defs",
    ],
)

bzl_library(
    name = "cdk_destroy",
    srcs = ["destroy.bzl"],
    visibility = ["//cdk:__subpackages__"],
    deps = [
        "@aspect_rules_js//js:defs",
    ],
)

bzl_library(
    name = "cdk_diff",
    srcs = ["diff.bzl"],
    visibility = ["//cdk:__subpackages__"],
    deps = [
        "@aspect_rules_js//js:defs",
    ],
)
