"""Provides a simple way to test your rules as an external workspace.
Add a basic smoke-test target below.
"""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@contrib_rules_cdk//cdk:defs.bzl", "cdk_bootstrap")

npm_link_all_packages(
    name = "node_modules",
)

build_test(
    name = "smoke_test",
    targets = [
        "//examples/javascript:assembly",
    ],
)

cdk_bootstrap(name = "bootstrap")
