load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")
load("@contrib_rules_cdk//cdk:defs.bzl", "cdk_assembly")

js_library(
    name = "lib",
    srcs = [
        "app.js",
        "//:node_modules/aws-cdk-lib",
    ],
)

js_binary(
    name = "bin",
    data = [
        ":lib",
    ],
    entry_point = "app.js",
)

cdk_assembly(
    name = "assembly",
    app = ":bin",
    visibility = ["//visibility:public"],
)
