load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")
load("@contrib_rules_cdk//cdk:defs.bzl", "cdk_assembly", "cdk_deploy", "cdk_destroy", "cdk_diff")

js_library(
    name = "lib",
    srcs = [
        "app.js",
        "//:node_modules/aws-cdk-lib",
    ],
)

js_binary(
    name = "app",
    data = [
        ":lib",
    ],
    entry_point = "app.js",
)

cdk_assembly(
    name = "assembly",
    app = ":app",
    visibility = ["//visibility:public"],
)

cdk_diff(
    name = "diff",
    assembly = ":assembly",
)

cdk_deploy(
    name = "deploy",
    assembly = ":assembly",
)

cdk_destroy(
    name = "destroy",
    assembly = ":assembly",
)
